--- a/.github/workflows/tryhackme-badge-workflow.yml
+++ b/.github/workflows/tryhackme-badge-workflow.yml
@@ -7,11 +7,11 @@ on:
   workflow_dispatch:
 jobs:
   tryhackme-badge-update:
-    name: <img src="https://tryhackme-badges.s3.amazonaws.com/muteshotgunguy.png" alt="TryHackMe">
+    name: Update this repo's tryhackme badge with the latest tryhackme image badge
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: axlfranklin/tryhackme-badge-workflow@main
+      - uses: ./
         with:
           # Replace with your tryhackme username
           username: "muteshotgunguy"
